kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web-service
spec:
  selector:
    app: hello-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
